--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,8 +13,7 @@ permissions:
   contents: read
 
 jobs:
-  setup:
-
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -38,7 +37,7 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
-    needs: setup
+    needs: build
 
     steps:
     - uses: actions/checkout@v4
@@ -61,9 +60,9 @@ jobs:
         black --check . 
         isort --check-only .
 
-  test:
+  tests:
     runs-on: ubuntu-latest
-    needs: setup
+    needs: lint
 
     steps:
     - uses: actions/checkout@v4
@@ -84,3 +83,11 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+
+  deployment:
+    runs-on: ubuntu-latest
+    needs: tests
+
+    steps:
+    - name: Deploy application
+      run: echo "Deploying application..."
