--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,6 +34,13 @@ jobs:
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
+    - name: Archive dependencies
+      run: tar -czf dependencies.tar.gz .venv
+    - name: Upload dependencies
+      uses: actions/upload-artifact@v3
+      with:
+        name: dependencies
+        path: dependencies.tar.gz
 
   lint:
     runs-on: ubuntu-latest
@@ -45,11 +52,13 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
-    - name: Restore dependencies from cache
-      uses: actions/cache@v3
+    - name: Download dependencies
+      uses: actions/download-artifact@v3
       with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        name: dependencies
+        path: .
+    - name: Extract dependencies
+      run: tar -xzf dependencies.tar.gz
     - name: Check code compliance with black and isort
       run: |
         black --check . 
@@ -65,19 +74,27 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
-    - name: Restore dependencies from cache
-      uses: actions/cache@v3
+    - name: Download dependencies
+      uses: actions/download-artifact@v3
       with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        name: dependencies
+        path: .
+    - name: Extract dependencies
+      run: tar -xzf dependencies.tar.gz
     - name: Test with pytest
-      run: |
-        pytest
+      run: pytest
 
   deployment:
     runs-on: ubuntu-latest
     needs: tests
 
     steps:
+    - name: Download dependencies
+      uses: actions/download-artifact@v3
+      with:
+        name: dependencies
+        path: .
+    - name: Extract dependencies
+      run: tar -xzf dependencies.tar.gz
     - name: Deploy application
-      run: echo "Deploying application..."
+      run: echo "Deploying your application..."
