--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,25 +22,18 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install black isort pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Cache dependencies
+    - name: Cache pip
       uses: actions/cache@v3
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
-    - name: Archive project directory
-      run: tar -czf project-with-dependencies.tar.gz --exclude='.git' --exclude='project-with-dependencies.tar.gz' .
-    - name: Upload project directory
-      uses: actions/upload-artifact@v3
-      with:
-        name: project-with-dependencies
-        path: project-with-dependencies.tar.gz
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install black isort pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
   lint:
     runs-on: ubuntu-latest
@@ -52,13 +45,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
-    - name: Download project directory
-      uses: actions/download-artifact@v3
+    - name: Restore pip cache
+      uses: actions/cache@v3
       with:
-        name: project-with-dependencies
-        path: .
-    - name: Extract project directory
-      run: tar -xzf project-with-dependencies.tar.gz
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+    - name: Install dependencies (if needed)
+      run: |
+        python -m pip install --upgrade pip
+        pip install black isort
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Check code compliance with black and isort
       run: |
         black --check . 
@@ -74,27 +70,38 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
-    - name: Download project directory
-      uses: actions/download-artifact@v3
+    - name: Restore pip cache
+      uses: actions/cache@v3
       with:
-        name: project-with-dependencies
-        path: .
-    - name: Extract project directory
-      run: tar -xzf project-with-dependencies.tar.gz
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+    - name: Install dependencies (if needed)
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
-      run: pytest
+      run: |
+        pytest
 
   deployment:
     runs-on: ubuntu-latest
     needs: tests
 
     steps:
-    - name: Download project directory
-      uses: actions/download-artifact@v3
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v3
       with:
-        name: project-with-dependencies
-        path: .
-    - name: Extract project directory
-      run: tar -xzf project-with-dependencies.tar.gz
+        python-version: "3.9"
+    - name: Restore pip cache
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+    - name: Install dependencies (if needed)
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Deploy application
       run: echo "Deploying your application..."
