--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ pydantic~=2.7.4
 uvicorn~=0.30.1
 fastapi~=0.111.0
 starlette~=0.37.2
-selenium
-pytest-asyncio
+beautifulsoup4==4.12.3
+pytest-asyncio==0.23.8
